config-k8s/defTelemetry/tracing/destinationRule-def.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: tracing-distination
  namespace: istio-system
spec:
  host: tracing
  trafficPolicy:
    tls:
      mode: DISABLE
