config-k8s/defTelemetry/tracing/virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tracing-vs
  namespace: istio-system
spec:
  hosts:
    - tracing.usvc.algo.fit
  gateways:
    - tracing-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: tracing
            port:
              number: 80
